--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "baseHref": "/UIL-Spelling/",
-            "outputPath": "dist/uil-spelling",
+            "outputPath": "dist",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -38,6 +38,7 @@
           },
           "configurations": {
             "production": {
+                "deleteOutputPath": true,
               "budgets": [
                 {
                   "type": "initial",
