--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "deploy": "ng build --output-path docs && node .\\post-build.js"
   },
   "private": true,
   "dependencies": {
@@ -31,7 +32,6 @@
     "@angular/cli": "^17.0.8",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
-    "angular-cli-ghpages": "^0.6.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
